Change timescan background
Signed-off-by: jiranun <aoykii0202@gmail.com>

--- a/TimeScanner.App/TimeScanner.App.csproj
+++ b/TimeScanner.App/TimeScanner.App.csproj
@@ -127,6 +127,12 @@
       <Name>TimeScanner.DSA</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="thes.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Untitled-3.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
